@startuml

class Ubicacion{
    - latitud: double
    - longitud: double
}

class Ciudad {
    -nombre: String
    -bandera: String
    -moneda: String
    -geografia: String
    -hitos: String
    -industria: String
    -animales: String
    -personalidades: String
    -idioma: String
    -arte: String
    -religion: String
    -gobierno: String
    -varios: String
    -ubicacion: Ubicacion
    -ciudadSiguiente: Ciudad
    -pasoLadron: boolean

    +visitarEdicifio(unEdificio: Edificio): String
    +setPistasEdificio(): void
    +viajarHasta(velocidad: int, ciudadDestino: Ciudad): void
}

Ciudad --> Ubicacion
Ciudad "1"-->"1...*" Edificio
@enduml